EKS/LoadBalancer/ALBC/gitea-config/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: my-gitea-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: test
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: byjus.ml
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-gitea-service
            port:
              number: 3000
